--- a/src/partials/deal.hbs
+++ b/src/partials/deal.hbs
@@ -6,7 +6,7 @@
 		<a
 			href='#consultation-form'
 			class='deal-content__link'
-			onclick="_tmr.push({ type: 'reachGoal', id: 3495983, goal: 'get_consultation'});ym(53115394, 'reachGoal', 'get_consultation', {location_click: 'main_banner'}); return true;"
+			onclick="_tmr.push({ type: 'reachGoal', id: 3495983, goal: 'click_on_applicat_quest_cb_consult_ord_er_buttonk'});ym(53115394, 'reachGoal', 'click_on_applicat_quest_cb_consult_ord_er_buttonk', {location_click: 'main_banner', URL: document.location.href, goal: 'click_on_applicat_quest_cb_consult_ord_er_buttonk'}); return true;"
 		>Найти поддержку</a>
 		<img
 			class='deal-content__man'
