--- a/src/styles/components/card.css
+++ b/src/styles/components/card.css
@@ -13,11 +13,15 @@
 		border-top-right-radius: 15px;
 	}
 }
-
-.badge {
+.badges {
 	position: absolute;
 	top: 10px;
 	right: 10px;
+	display: flex;
+	gap: 10px;
+}
+
+.badge {
 	color: #000;
 	font-family: 'Cera Pro';
 	font-size: 10px;
