--- a/src/styles/widgets/footer.css
+++ b/src/styles/widgets/footer.css
@@ -149,6 +149,13 @@
 	}
 }
 
+.footer-address {
+	margin-top: 20px;
+	color: #fff;
+	opacity: 0.7;
+	font-size: 14px;
+}
+
 .footer-links {
 	color: #fff;
 	font-size: 18px;
