--- a/src/partials/dropdown.hbs
+++ b/src/partials/dropdown.hbs
@@ -3,7 +3,7 @@
 		<a class='button'><span class='stick' /></a>
 	</summary>
 	<ul>
-		<li class='dropdown__item'><a href='#financial-support'>Меры поддержки</a></li>
+		<li class='dropdown__item'><a href='#financial-support'>Меры развития</a></li>
 		<li class='dropdown__item dropdown__item--mobile'><a
 				href='#consultation-form'
 				onclick="_tmr.push({ type: 'reachGoal', id: 3495983, goal: 'get_consultation'});ym(53115394, 'reachGoal', 'get_consultation', {location_click: 'main_banner'}); return true;"
