feat: upd build

--- a/src/partials/cards.hbs
+++ b/src/partials/cards.hbs
@@ -1,5 +1,5 @@
 <section class="cards section" id="financial-support">
-	<h2>Получите финансовые меры поддержки&nbsp;<br />для развития вашего дела</h2>
+	<h2>Получите финансовые меры&nbsp;для развития вашего дела</h2>
 	<ul class="cards-list">
 		{{#each mainCards}}
 		{{> card}}
