--- a/src/partials/card.hbs
+++ b/src/partials/card.hbs
@@ -21,7 +21,7 @@
 					href='{{href}}'
 					target='_blank'
 					class='button-primary card-button'
-					onclick="_tmr.push({ type: 'reachGoal', id: 3495983, goal: 'go_to_the_website'});ym(53115394, 'reachGoal', 'go_to_the_website'); return true;"
+					onclick="_tmr.push({ type: 'reachGoal', id: 3495983, goal: 'click_on_applicat_quest_cb_consult_ord_er_buttonk'});ym(53115394, 'reachGoal', 'click_on_applicat_quest_cb_consult_ord_er_buttonk', {site: '{{site}}', URL: document.location.href, goal: 'click_on_applicat_quest_cb_consult_ord_er_buttonk'}); return true;"
 				>Подробнее</a>
 
 			{{/if}}
